@@ -1,5 +1,6 @@
 #option nodynamic
 
+interbase
 #GD
 #curses
 #dbm
