@@ -1,3 +1,12 @@
+Thu May 13 10:40:44 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* eval.c (rb_eval_string_wrap): new function.
+
+	* regex.c (re_compile_pattern): POSIX line match should alter
+	  behavior for `^' and `$' to begbuf and endbuf2 respectively.
+
+	* ext/pty/pty.c: un-ANSI-fy function arguments.
+
 Wed May 12 14:19:38 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* struct.c (iv_get): in case of inheritance of generated struct
